# libsleepyc

./: .editorconfig  .gitignore  LICENSE  Makefile  README.rst  meson.build  meson_options.txt  shell.nix
include/sleepyc/: memory.h  number.h  string.h
include/sleepyc/internal/: guts_of_the_allocator.h
platform/linux/src/memory/alloc/: allocate.c  free.c
src/memory/: misc.c
src/memory/alloc/: allocate.c  free.c  region.c
src/number/: misc.c  string.c
src/string/: buffer.c  format.c  misc.c  number.c
subprojects/: .gitignore
test/string/: format.c
